addressing issues on `/about` page (#318)
* adding a few issues reported in #309

* matching gap between flex containers with parent site

* adjusting gaps, positions and font-sizes of various elements at different breakpoints

* incorrect clipping of researchers' image on >992px viewports

* adapting padding for [922px, 1232px) for overlapping content's text with background

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -2,7 +2,7 @@
   margin: 2rem 0 4rem;
 }
 
-.columns.crop-image {
+.columns.invert-image-order-in-narrow-view {
   margin-bottom: 0;
 }
 
@@ -51,7 +51,7 @@
   order: 0;
 }
 
-.columns.invert-image-order-in-narrow-view > div > .columns-img-col {
+.columns.invert-image-order-in-narrow-view > div .columns-img-col {
   order: 2;
 }
 
@@ -68,20 +68,16 @@
   order: 1;
 }
 
-.columns > div > div > h2 {
+.columns > div > div h2 {
   margin: 1.5rem 0;
 }
 
-.columns > div > div > p {
+.columns > div > div p {
   margin: 2rem 0 3rem;
   margin-top: 0;
 }
 
-.columns.overlap-text-with-image > div > div > p {
-  margin-bottom: 2rem;
-}
-
-.columns > div > div.non-singleton-img {
+.columns > div div.non-singleton-img {
   margin: 0 1rem;
 }
 
@@ -89,12 +85,7 @@
   align-items: stretch;
 }
 
-.columns.overlap-text-with-image > div > div.non-singleton-img {
-  margin-bottom: -5.25rem;
-  z-index: 1;
-}
-
-.columns.collapse > div > div.non-singleton-img {
+.columns.collapse > div div.non-singleton-img {
   margin: 0;
 }
 
@@ -120,12 +111,12 @@
 }
 
 .columns.plain-links > div > div,
-.columns.plain-links > div > div > p {
+.columns.plain-links > div > div p {
   font-size: var(--body-font-size-s);
   margin-left: 0;
 }
 
-.columns.plain-links > div > div > p:last-of-type {
+.columns.plain-links > div > div p:last-of-type {
   margin-bottom: 0;
 }
 
@@ -248,7 +239,7 @@
     gap: 3rem;
   }
 
-  .columns > div > .columns-img-col {
+  .columns > div .columns-img-col {
     order: unset;
   }
 
@@ -258,12 +249,8 @@
     flex-basis: 50%;
   }
 
-  .columns.invert-image-order-in-narrow-view > div > .columns-img-col {
+  .columns.invert-image-order-in-narrow-view > div .columns-img-col {
     order: unset;
-  }
-
-  .columns.overlap-text-with-image > div > div.non-singleton-img {
-    margin-bottom: unset;
   }
 
   .columns.plain-links > div a {
